Slides: Use `overflow-y: auto` to fix scrolling strangeness

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,7 +10,7 @@ html {
     height: 100%;
     quotes: "\201C" "\201D";
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     /* COLORS */
     --off-white: #FFE6C2;
